--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     />
 
     <!-- CSS & JS -->
-    <script type="module" crossorigin src="/assets/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index.css" />
+    <script type="module" crossorigin src="./assets/index.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/index.css" />
   </head>
 
   <body>
